# algorithms

./: .gitignore
src/HaskellSolutions/: CHANGELOG.md  HaskellSolutions.cabal
src/HaskellSolutions/src/Easy/: LongestCommonPrefix.hs  MergeLists.hs  Palindrome.hs  RemoveDuplicates.hs  ReverseWords.hs  TwoSum.hs  ValidParentheses.hs
src/HaskellSolutions/src/Medium/: AddTwoNumbers.hs  LongestSubstring.hs  ReverseInteger.hs  ZigzagConversion.hs
src/ScalaSolutions/scalasolutions/src/easy/: LongestCommonPrefix.scala  Palindrome.scala  ReverseWord.scala
src/ScalaSolutions/src/easy/: MergeLists.scala  TwoSum.scala  ValidParentheses.scala
src/ScalaSolutions/src/medium/: AddTwoNumbers.scala  LongestSubstring.scala  ReverseInteger.scala
